--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -3,12 +3,7 @@
     <ul>
       <li>
         <div ngbDropdown class="dropdownmenu">
-          <a
-            class="icon file"
-            id="dropdownBasic1"
-            ngbDropdownToggle
-            onfocus="this.blur();"
-          >
+          <a class="icon file" id="dropdownBasic1" ngbDropdownToggle onfocus="this.blur();">
             <i class="far fa-file"></i>
           </a>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
@@ -16,24 +11,17 @@
             <label style="width: 100%; margin: 0px">
               <span ngbDropdownItem>
                 ファイルを開く
-                <input
-                  type="file"
-                  accept="application/text"
-                  (change)="open($event)"
-                  style="display: none"
-                />
+                <input type="file" accept="application/text" (change)="open($event)" style="display: none" />
               </span>
             </label>
             <button ngbDropdownItem (click)="fileSave()">ファイルを保存</button>
+            <button *ngIf="electronService.isElectronApp" ngbDropdownItem (click)="overWrite()">
+              上書き保存
+          </button>
             <label style="width: 100%; margin: 0px">
               <span ngbDropdownItem>
                 ピックアップファイルを開く
-                <input
-                  type="file"
-                  accept="application/text"
-                  (change)="pickup($event)"
-                  style="display: none"
-                />
+                <input type="file" accept="application/text" (change)="pickup($event)" style="display: none" />
               </span>
             </label>
           </div>
@@ -56,22 +44,12 @@
   <div class="rightArea">
     <div class="language-area">
       <div ngbDropdown>
-        <a
-          class="btn btn-outline-primary"
-          id="language1"
-          ngbDropdownToggle
-          class="menu-btn lang"
-          >{{ language.languageIndex[language.browserLang] }}</a
-        >
+        <a class="btn btn-outline-primary" id="language1" ngbDropdownToggle class="menu-btn lang">{{
+          language.languageIndex[language.browserLang] }}</a>
         <div ngbDropdownMenu aria-labelledby="language1">
           <ng-container *ngFor="let index of language.languageIndex | keyvalue">
-            <a
-              ngbDropdownItem
-              (click)="language.trans(index.key)"
-              class="menu-btn"
-              style="color: #333"
-              >{{ index.value }}</a
-            >
+            <a ngbDropdownItem (click)="language.trans(index.key)" class="menu-btn" style="color: #333">{{ index.value
+              }}</a>
           </ng-container>
         </div>
       </div>
@@ -80,21 +58,10 @@
     <div class="login-area">
       <div *ngIf="auth.user | async as user; else showLogin" class="userInfo">
         <div ngbDropdown>
-          <a
-            class="icon file"
-            id="dropdownBasic1"
-            class="menu-btn"
-            ngbDropdownToggle
-            onfocus="this.blur();"
-            ><i class="far fa-user-circle"></i>{{ user.displayName }}</a
-          >
+          <a class="icon file" id="dropdownBasic1" class="menu-btn" ngbDropdownToggle onfocus="this.blur();"><i
+              class="far fa-user-circle"></i>{{ user.displayName }}</a>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-            <a
-              (click)="auth.signOut()"
-              (click)="logOut()"
-              class="menu-btn logOut"
-              >ログアウト</a
-            >
+            <a (click)="auth.signOut()" (click)="logOut()" class="menu-btn logOut">ログアウト</a>
           </div>
         </div>
       </div>
