部材・断面(members)、算出点(design-points)、鉄筋配置(steels)、完了 断面力(section-forces)、鉄筋位置(bars)、一部翻訳保留

--- a/src/app/components/members/members.component.html
+++ b/src/app/components/members/members.component.html
@@ -4,34 +4,40 @@
 
 <div class="footer">
   <div class="left-table">
-  <p>断面形状</p>
+  <p translate>members.section_sh</p>
   <table >
     <thead>
       <tr>
-        <th width="50px">番号</th>
-        <th width="70px">構造</th>
-        <th width="90px">形状</th>
+        <th width="50px">
+          <p translate>members.No</p>
+        </th>
+        <th width="70px">
+          <p translate>members.structure</p>
+        </th>
+        <th width="90px">
+          <p translate>members.shape</p>
+        </th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>1</td>
         <td rowspan="2">RC, SRC</td>
-        <td>矩形</td>
+        <td translate>members.rectangle</td>
       </tr>
       <tr>
         <td>2</td>
-        <td>T形</td>
+        <td translate>members.t_shape</td>
       </tr>
       <tr>
         <td>3</td>
         <td>RC, CFT</td>
-        <td>円形</td>
+        <td translate>members.r_shape</td>
       </tr>
       <tr>
         <td>4</td>
         <td>RC</td>
-        <td>小判</td>
+        <td translate>members.oval</td>
       </tr>
     </tbody>
   </table>
