--- a/src/app/components/section-forces/section-forces.component.html
+++ b/src/app/components/section-forces/section-forces.component.html
@@ -3,18 +3,19 @@
     <ul class="c-subNavArea__nav">
       <li class="c-subNavArea__navItem">
         <a (click)="activePageChenge(0)" id="foc0" class="c-subNavArea__navItemTitle">
-          <span>曲げ照査</span>
+          <span translate>section-forces.b_check</span>
+
         </a>
       </li>
       <li class="c-subNavArea__navItem">
         <a (click)="activePageChenge(1)" id="foc1" class="c-subNavArea__navItemTitle">
-          <span>せん断照査</span>
+          <span translate>section-forces.s_check</span>
         </a>
       </li>
       <!-- ねじり -->
       <li class="c-subNavArea__navItem">
         <a (click)="activePageChenge(2)" id="foc3" class="c-subNavArea__navItemTitle">
-          <span>ねじり照査</span>
+          <span translate>section-forces.t_check</span>
         </a>
       </li>
     </ul>
