ひび割れデータ(crack-settings)、疲労データ(fatigues)完了

--- a/src/app/components/fatigues/fatigues.component.html
+++ b/src/app/components/fatigues/fatigues.component.html
@@ -1,7 +1,9 @@
 <div class="form-container">
   <form>
     <div class="input-container">
-      <label>耐用年数：</label>
+      <label>
+       <p translate>fatigues.durable</p>
+      </label>
       <input id="T" name="T" type="text" [(ngModel)]="service_life" />
     </div>
     <div class="input-container">
