--- a/src/app/components/crack/crack-settings.component.html
+++ b/src/app/components/crack/crack-settings.component.html
@@ -16,20 +16,20 @@
 
 <div class="footer">
   <div class="left-table">
-    <p>環境条件</p>
+    <p translate>crack-settings.env</p>
     <table>
       <tbody>
         <tr>
           <th width="30">1</th>
-          <td>一般</td>
+          <td translate>crack-settings.normal</td>
         </tr>
         <tr>
           <th>2</th>
-          <td>腐食性</td>
+          <td translate>crack-settings.cor</td>
         </tr>
         <tr>
           <th>3</th>
-          <td>とくに厳しい腐食性</td>
+          <td translate>crack-settings.es_cor</td>
         </tr>
       </tbody>
     </table>
