calculation-print(計算・印刷),app,menu,login-dialog完了

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
             id="0"
             class="c-mainNavArea__navItemTitle"
           >
-            <span>基本データ</span>
+            <span translate>app.basic_info</span>
           </a>
         </li>
         <li class="c-mainNavArea__navItem">
@@ -30,7 +30,7 @@
             id="1"
             class="c-mainNavArea__navItemTitle is-active"
           >
-            <span>部材・断面</span>
+            <span translate>app.members</span>
           </a>
         </li>
         <li class="c-mainNavArea__navItem" [hidden]="isManual()">
@@ -41,7 +41,7 @@
             id="2"
             class="c-mainNavArea__navItemTitle disabled"
           >
-            <span>算出点</span>
+            <span translate>app.point</span>
           </a>
         </li>
         <li class="c-mainNavArea__navItem" [hidden]="!isManual()">
@@ -52,7 +52,7 @@
             id="8"
             class="c-mainNavArea__navItemTitle"
           >
-            <span>断面力</span>
+            <span translate>app.section_force</span>
           </a>
         </li>
         <li class="c-mainNavArea__navItem">
@@ -63,7 +63,7 @@
             id="3"
             class="c-mainNavArea__navItemTitle disabled"
           >
-            <span>鉄筋配置</span>
+            <span translate>app.bars</span>
           </a>
         </li>
         <li class="c-mainNavArea__navItem">
@@ -74,7 +74,7 @@
             id="4"
             class="c-mainNavArea__navItemTitle disabled"
           >
-            <span>鉄骨配置</span>
+            <span translate>app.steels</span>
           </a>
         </li>
         <li class="c-mainNavArea__navItem">
@@ -85,7 +85,7 @@
             id="5"
             class="c-mainNavArea__navItemTitle disabled"
           >
-            <span>ひび割れデータ</span>
+            <span translate>app.crack</span>
           </a>
         </li>
         <li class="c-mainNavArea__navItem">
@@ -96,7 +96,7 @@
             id="6"
             class="c-mainNavArea__navItemTitle disabled"
           >
-            <span>疲労データ</span>
+            <span translate>app.fatigues</span>
           </a>
         </li>
         <li class="c-mainNavArea__navItem">
@@ -107,7 +107,7 @@
             id="7"
             class="c-mainNavArea__navItemTitle disabled"
           >
-            <span>安全係数・材料強度</span>
+            <span translate>app.sf_ms</span>
           </a>
         </li>
         <li class="c-mainNavArea__navItem">
@@ -118,7 +118,7 @@
             id="9"
             class="c-mainNavArea__navItemTitle"
           >
-            <span>計算・印刷</span>
+            <span translate>app.calc_print</span>
           </a>
         </li>
       </ul>
