bars(鉄筋配置)の翻訳保留解消、blank-page(最初のページ)完了

--- a/src/app/components/blank-page/blank-page.component.html
+++ b/src/app/components/blank-page/blank-page.component.html
@@ -1,10 +1,20 @@
 <div class="container">
   <div class="scroller">
     <div class="inner">
-      <span>断面性能照査</span>
-      <span>本プログラムは、鉄道構造物等設計標準・同解説</span>
-      <span>コンクリート構造物―平成16年4月に準拠した、</span>
-      <span>断面の<a class="blue">釣り合い計算</a>および <a class="blueb">応力度の算定</a>を行うプログラムです。</span>
+      <span translate>blank-page.cs_pc</span>
+      <span translate>blank-page.program</span>
+      <span translate>blank-page.with2004</span>
+      <span>
+        <a translate>blank-page.cs</a>
+        <a class="blue" translate>
+          blank-page.bal_calc
+        </a>
+        <a translate>blank-page.and</a>
+        <a class="blueb" translate>
+          blank-page.stress_calc
+        </a>
+        <a translate>blank-page.in_program</a>
+      </span>
     </div>
   </div>
 </div>
