--- a/src/app/calculation/section-force-list/section-force-list.component.html
+++ b/src/app/calculation/section-force-list/section-force-list.component.html
@@ -11,12 +11,12 @@
       <table class="spreadsheet">
         <thead class="head">
           <tr>
-            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2">部材<br>番号</th>
-            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2">算出<br>番号</th>
-            <th class="center g-right1 g-bottom2" style="width:64px;" rowspan="2">算出点</th>
-            <th class="center g-right2 g-bottom2" style="width:110px;" rowspan="2">算出点名</th>
-            <th class="center g-right2 g-bottom1" style="width:190px;" colspan="3">上側</th>
-            <th class="center g-bottom1" style="width:190px;" colspan="3">下側</th>
+            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2" translate>section-force-list.m_no</th>
+            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2" translate>section-force-list.calc_no</th>
+            <th class="center g-right1 g-bottom2" style="width:64px;" rowspan="2" translate>section-force-list.point</th>
+            <th class="center g-right2 g-bottom2" style="width:110px;" rowspan="2" translate>section-force-list.p_name</th>
+            <th class="center g-right2 g-bottom1" style="width:190px;" colspan="3" translate>section-force-list.top</th>
+            <th class="center g-bottom1" style="width:190px;" colspan="3" translate>section-force-list.under</th>
           </tr>
           <tr>
             <th class="center g-right1 g-bottom2" style="width:75px;">M (kN・m)</th>
@@ -51,10 +51,10 @@
       <table class="spreadsheet">
         <thead>
           <tr>
-            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2">部材<br>番号</th>
-            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2">算出<br>番号</th>
-            <th class="center g-right1 g-bottom2" style="width:64px;" rowspan="2">算出点</th>
-            <th class="center g-right2 g-bottom2" style="width:170px;" colspan="2" rowspan="2">算出点名</th>
+            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2" translate>section-force-list.m_no</th>
+            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2" translate>section-force-list.calc_no</th>
+            <th class="center g-right1 g-bottom2" style="width:64px;" rowspan="2" translate>section-force-list.point</th>
+            <th class="center g-right2 g-bottom2" style="width:170px;" colspan="2" rowspan="2" translate>section-force-list.p_name</th>
             <th class="center g-right1" style="width:80px;">V</th>
             <th class="center g-right1" style="width:80px;">M</th>
             <th class="center g-right1" style="width:80px;">N</th>
@@ -97,10 +97,10 @@
       <table class="spreadsheet">
         <thead>
           <tr>
-            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2">部材<br>番号</th>
-            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2">算出<br>番号</th>
-            <th class="center g-right1 g-bottom2" style="width:64px;" rowspan="2">算出点</th>
-            <th class="center g-right2 g-bottom2" style="width:170px;" colspan="2" rowspan="2">算出点名</th>
+            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2" translate>section-force-list.m_no</th>
+            <th class="center g-right1 g-bottom2" style="width:40px;" rowspan="2" translate>section-force-list.calc_no</th>
+            <th class="center g-right1 g-bottom2" style="width:64px;" rowspan="2" translate>section-force-list.point</th>
+            <th class="center g-right2 g-bottom2" style="width:170px;" colspan="2" rowspan="2" translate>section-force-list.p_name</th>
             <th class="center g-right1" style="width:60px;">Mt</th>
             <th class="center g-right1" style="width:60px;">M</th>
             <th class="center g-right1" style="width:60px;">V</th>
