記号を修正

--- a/src/app/calculation/result-restorability-moment/result-restorability-moment.component.html
+++ b/src/app/calculation/result-restorability-moment/result-restorability-moment.component.html
@@ -297,14 +297,14 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">ε'cu</th>
+        <th colspan="2" class="cell_name1">ε'c</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.ecu.alien}} g-left2">
           {{column.ecu.value}}</td>
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">εs</th>
+        <th colspan="2" class="cell_name1">εsy</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.es.alien}} g-left2">
           {{column.es.value}}</td>
